--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
   <display-name>Archetype Created Web Application</display-name>
   
   <servlet>
@@ -15,4 +16,13 @@
         <servlet-name>todo</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+    
+    <listener>
+    
+    <listener-class>com.l.MyListener</listener-class>
+    
+    </listener>
+    
+    
+    
 </web-app>
